[PFDA-2395] Fixed challenge introduction and results area overflowing when users place a large image. - Also factored out some code from ChallengeDetailsPage into separate components: ChallengeOutline, ChallengeUserContent and ChallengeResults

--- a/client/src/views/pages/Challenges/ChallengeDetailsPage/style.sass
+++ b/client/src/views/pages/Challenges/ChallengeDetailsPage/style.sass
@@ -118,49 +118,6 @@
         border-bottom: 3px solid $color-danger
 
 
-.challenge-details-content
-
-  h1
-    font-size: $pfda-font-size-h1
-    line-height: 24px
-
-  h2
-    font-size: $pfda-font-size-h2
-    line-height: 20px
-
-  p
-    font-size: $pfda-font-size-body
-    font-weight: 400
-    line-height: 20px
-  
-
-.challenge-details-outline
-  .outline-item-h1
-    margin-top: 3px
-
-    a
-      color: $color-text-dark-grey
-      font-weight: 400
-      font-size: $pfda-font-size-subheading
-      margin-top: 12px
-
-      &:hover
-        color: $color-text-medium-grey
-
-  .outline-item-h2
-    margin-top: 3px
-    margin-left: 16px
-
-    a
-      color: $color-text-dark-grey
-      font-weight: 400
-      font-size: $pfda-font-size-subheading
-      margin-top: 12px
-
-      &:hover
-        color: $color-text-medium-grey
-
-
 .challenge-join-button
   display: block
   width: 100%
